Adding photos for the gallery, and modifying banner with different photo and removing circle from title

--- a/index.html
+++ b/index.html
@@ -85,10 +85,9 @@
             <div class="slider_text text-center">
                 <div class="text_inner">
                     <img src="img/banner/ornaments.png" alt="">
-                    <h4>14 Jan 2020</h4>
-                    <h3>Anjelina & Jack <br>
-                        Wedding Ceremony</h3>
-                    <span>Get Married</span>
+                    <h4>21 de Enero del 2023</h4>
+                    <h3>Andrea & Erick</h3>
+                    <span>Nos casamos</span>
                 </div>
             </div>
         </div>
@@ -108,8 +107,9 @@
                 <div class="col-xl-12">
                     <div class="section_title text-center">
                         <img src="img/banner/flowers.png" alt="">
-                        <span>14. January. 2020</span>
-                        <h3>THE. WEDDING. Countdown</h3>
+                        <!-- <span>21. Enero. 2023</span> -->
+                        <!-- <h3>Cuenta regresiva para la Boda</h3> -->
+                        <h3>21. Enero. 2023</h3>
                     </div>
                 </div>
             </div>
@@ -122,87 +122,6 @@
         </div>
     </div>
     <!--/ wedding_countdown -->
-
-    <!-- our_love-story -->
-    <div class="love_story_area">
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-12">
-                    <div class="section_title text-center">
-                        <img src="img/banner/flowers.png" alt="">
-                        <h3>Our. Love. Story</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="single_lover_story text-center">
-                        <div class="story_thumb">
-                            <img src="img/story/1.png" alt="">
-                        </div>
-                        <span>Groom</span>
-                        <h3>Jack Wonner</h3>
-                        <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                            alteration in some content of a page when looking at its layout. The point of using Lorem
-                            Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                            Content here content here, making it look like readable English. Many desktop publishing
-                            packages and web page editors now use.</p>
-                        <div class="social_links">
-                            <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-md-6 col-lg-4">
-                    <div class="weding_time_line text-center">
-                        <div class="single_time_line">
-                            <h3>Fast Meet</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
-                        </div>
-                        <div class="single_time_line">
-                            <h3>He Proposed</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
-                        </div>
-                        <div class="single_time_line">
-                            <h3>Love Story</h3>
-                            <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                                alteration in some.</p>
-                        </div>
-                        <div class="single_time_line">
-                            <h3>Wedding Day</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4">
-                    <div class="single_lover_story text-center">
-                        <div class="story_thumb">
-                            <img src="img/story/2.png" alt="">
-                        </div>
-                        <span>Bride</span>
-                        <h3>Anjelina Kona</h3>
-                        <p>Many variations of passages of Lorem Ipsum available, but the majority have suffered
-                            alteration in some content of a page when looking at its layout. The point of using Lorem
-                            Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using
-                            Content here content here, making it look like readable English. Many desktop publishing
-                            packages and web page editors now use.</p>
-                        <div class="social_links">
-                            <ul>
-                                <li><a href="#"> <i class="fa fa-facebook"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-twitter"></i> </a></li>
-                                <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--/ our_love-story -->
 
     <!-- gallery_area  -->
     <div class="gallery_area">
@@ -220,55 +139,85 @@
             <div class="row grid no-gutters">
                 <div class="col-xl-4 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_1">
-                        <a class="popup-image" href="img/gallery/1.png">
+                        <a class="popup-image" href="img/gallery/A_J-31.JPG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_2">
-                        <a class="popup-image" href="img/gallery/2.png">
+                        <a class="popup-image" href="img/gallery/A_J-51.JPG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_3">
-                        <a class="popup-image" href="img/gallery/3.png">
+                        <a class="popup-image" href="img/gallery/A_J-67.JPEG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_4">
-                        <a class="popup-image" href="img/gallery/4.png">
+                        <a class="popup-image" href="img/gallery/A_J-130.JPEG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_5">
-                        <a class="popup-image" href="img/gallery/5.png">
+                        <a class="popup-image" href="img/gallery/A_J-123.jpeg">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_6">
-                        <a class="popup-image" href="img/gallery/6.png">
+                        <a class="popup-image" href="img/gallery/A_J-134.JPG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_7">
-                        <a class="popup-image" href="img/gallery/7.png">
+                        <a class="popup-image" href="img/gallery/A_J-141.jpeg">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-3 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_8">
-                        <a class="popup-image" href="img/gallery/8.png">
+                        <a class="popup-image" href="img/gallery/A_J-197.JPG">
                         </a>
                     </div>
                 </div>
                 <div class="col-xl-5 col-md-6 col-lg-6 grid-item">
                     <div class="single_gallery gallery_imag_9">
-                        <a class="popup-image" href="img/gallery/9.png"></a>
+                        <a class="popup-image" href="img/gallery/A_J-171.JPEG"></a>
+                    </div>
+                </div>
+                <div class="col-xl-5 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_10">
+                        <a class="popup-image" href="img/gallery/A_J-229.JPG"></a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_11">
+                        <a class="popup-image" href="img/gallery/A_J-234.jpeg"></a>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_12">
+                        <a class="popup-image" href="img/gallery/A_J-237.JPG"></a>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_13">
+                        <a class="popup-image" href="img/gallery/A_J-268.JPG"></a>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_14">
+                        <a class="popup-image" href="img/gallery/Portada.jpeg"></a>
+                    </div>
+                </div>
+                <div class="col-xl-5 col-md-6 col-lg-6 grid-item">
+                    <div class="single_gallery gallery_imag_15">
+                        <a class="popup-image" href="img/gallery/A_J-261.jpeg"></a>
                     </div>
                 </div>
             </div>
