--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             });
         }
     </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&amp;callback=initMap">
+    <script src="https://maps.googleapis.com/maps/api/staticmap?center=40.714%2c%20-73.998&zoom=12&size=400x400&key=AIzaSyBmzxPSu8zEZDWSh3p47nceqjpqpkK4Gcs">
     </script>
 
 
