--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Weeding</title>
+    <title>Andrea & Erick</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -130,7 +130,7 @@
                 <div class="col-xl-12">
                     <div class="section_title text-center">
                         <img src="img/banner/flowers.png" alt="">
-                        <h3>Gallery.  Photos</h3>
+                        <!-- <h3>Gallery.  Photos</h3> -->
                     </div>
                 </div>
             </div>
@@ -243,7 +243,7 @@
                 <div class="col-xl-12">
                     <div class="section_title text-center">
                         <img src="img/banner/flowers.png" alt="">
-                        <h3>Program. Details</h3>
+                        <h3>Itinerario</h3>
                     </div>
                 </div>
             </div>
