Changing text colors and adding more png pictures

--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center">
-                        <img style="height: 100px;" src="img/banner/andreayerick_flower.png" alt="">
+                        <img style="height: 200px;" src="img/banner/andreayerick_fecha.png" alt="">
                         <!-- <span>21. Enero. 2023</span> -->
                         <!-- <h3>Cuenta regresiva para la Boda</h3> -->
-                        <h3>21. Enero. 2023</h3>
+                        <!-- <h3>21 Enero 2023</h3> -->
                     </div>
                 </div>
             </div>
@@ -251,7 +251,7 @@
                             <span>
                                 19.00 hrs
                             </span>
-                            <h3>Ceremonia Religiosa</h3>
+                            <h3><strong>Ceremonia Religiosa</strong></h3>
                             <p><strong>Iglesia San Pablo Las Fuentes</strong></p>
                             <p>C. San Antonio 105, Las Fuentes, 45070 Zapopan, Jal.</p>
                             <img src="img/program_details/ornaments.png" alt="">
@@ -265,7 +265,7 @@
                                 20.00 hrs
                             </span>
 
-                            <h3>Recepción</h3>
+                            <h3><strong>Recepción</strong></h3>
                             <p><strong>Quinta Los Agapantos</strong></p>
                             <p>Cam. a las Moras 1532, 45640 San Agustín, Jal.</p>
                             <img src="img/program_details/ornaments.png" alt="">
