Adding media queries for title and date images

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- slider_area -->
     <div class="slider_area ">
         <div class="slider_area_inner slider_bg_1 overlay2">
-            <img loading="lazy"src="img/banner/andreayerick_title.png" alt="">
+            <img class="slider_area__img" loading="lazy" src="img/banner/andreayerick_title.png" alt="">
             <!-- <div class="slider_text text-center">
                 <div class="text_inner">
                 </div>
@@ -103,7 +103,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="section_title text-center">
-                        <img loading="lazy"style="height: 200px;" src="img/banner/andreayerick_fecha.png" alt="">
+                        <img class="secton_title__date" loading="lazy" src="img/banner/andreayerick_fecha.png" alt="">
                         <!-- <span>21. Enero. 2023</span> -->
                         <!-- <h3>Cuenta regresiva para la Boda</h3> -->
                         <!-- <h3>21 Enero 2023</h3> -->
