Fixing whatsapp message and CLABE number

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
             }
 
             var url = "https://wa.me/3316023739?text="
-                + "Hola! Confirmo mi asistencia a la boda de Andrea & Erick :)" + "%0a"
+                + "Hola! Confirmo mi asistencia a la boda de Andrea y Erick :)" + "%0a"
                 + "%0a"
                 // + "Mi Nombre: " + name + "%0a"
                 + "Cantidad de invitados: " + companion_number + "%0a"
